edit on comp creativity & music 2

--- a/Cyborg/Seminars/Computational Creativity and Music 2.html
+++ b/Cyborg/Seminars/Computational Creativity and Music 2.html
@@ -333,20 +333,7 @@ Synth(\my_synth, [\freq, note.postln.midicps, \dur, 0.2])
 }
 }.fork
 )</pre>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.022.png'/></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.023.png'/><br><b>Lejaren Hiller - cloudfront.net</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.024.png'/></div>
-
-<p><a href="http://youtu.be/n0njBFLQSk8">Illiac Suite, Experiment 1</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.025.png'/></div>
-
-<p><a href="http://youtu.be/MrN0pOnA1x4">Illiac Suite, Experiment 2</a>
-<p><a href="http://youtu.be/cuq4smO_4Js">Illiac Suite, Experiment 3</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.026.png'/><br><b>Lejaren Hiller - computermusicblog.com</b></div>
-
-<p><a href="http://youtu.be/QyqiSbbwHIs">Illiac Suite, Experiment 4</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.027.png'/><br><b>John Cage and Lejaren Hiller - musicainformatica.org</b></div>
-
-<p><a href="https://youtu.be/t_hTxJpWITw">John Cage and Lejaren Hiller, HPSCHD</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.028.png'/><br><b>Iannis Xenakis - pinimg.com</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.028.png'/><br><b>Iannis Xenakis - pinimg.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.029.png'/></div>
 <div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.030.png'/></div>
@@ -535,191 +522,5 @@ Ndef(\tendency).set(\trigFreq, 5);
 Ndef(\tendency, 0);</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.036.png'/></div>
-
-<p><pre class='code prettyprint lang-sc'>Quarks.gui //install NatureToolKit
-
-//NatureToolKit includes classes like:
-ModernLife //Cellular Automata
-LSys //L-systems
-GAWorkbench //Genetic Algorithms</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.037.png'/><br><b>Cellular Automata - emanueleferonato.com</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.038.png'/></div>
-
-<p><pre class='code prettyprint lang-sc'>ModernLife
-// the default rule is "23/3" (Conway's Game of Life)
-a = ModernLife.new; //will pop up the window
-//press space to run/stop. c to clear, r to randomize.
-//you can also create or kill cells with mouse interaction.
-
-a = ModernLife.new(8, 500); //numDivs, winSize (pixels)
-a.userFunc_({|states, population| states.postcs; population.postln; });
-//press space
-
-// conway's gol by default
-a = ModernLife.new.play;
-a.stop;</pre>
-
-<p><strong>setRule (argRuleString)</strong>
-<p>Sets the rule for the CA system. The notation for the rule is the same used in Mirek's Cellebration. It is a string in the format x/y where x and y are sequence of unique digits between 0 and 8 (inclusive). The digits in x side (for example digit d) means that a live cell with d live neighbors will survive to the next generation (others will die), and a digits in y side (digit k as an example) means that any dead cell with k alive neighbors will come to life. With this scheme, the Conway's Game of Life is defined as "23/3" (which is the default rule).<pre class='code prettyprint lang-sc'>//maze
-a = ModernLife.new.setRule("12345/3").fps_(5).fadeAmount_(1).play;
-a.stop;
-
-//coral
-a = ModernLife.new.setRule("45678/3").fps_(25).fadeAmount_(1).play;
-a.stop;
-
-//replicator, every pattern is replicated by a copy of itself.
-//clear the scene with c and draw a pattern, press space, watch in awe.
-a = ModernLife.new.setRule("1357/1357").fps_(10).fadeAmount_(1);
-a.stop;</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.039.png'/><br><b>L-system Tree - bentrubewriter.files.wordpress.com</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.040.png'/></div>
-
-<p><strong>LSystems</strong><pre class='code prettyprint lang-sc'>// simple example, fibonacci numbers
-a = LSys("A", ["A" -&gt; "B", "B" -&gt; "AB"]);
-10.do({ a.applyRules(1).postln; });</pre>
-<ul>
-<li>variables : 0, 1<li>constants: [, ]<li>axiom : 0<li>rules : (1 → 11), (0 → 1[0]0)</ul>
-
-<p><strong>Context free examples</strong>:<pre class='code prettyprint lang-sc'>//Koch Snowflake
-(
-a = LSys("F--F--F", ["F" -&gt; "F+F--F+F"]);
-k = a.applyRules(4);
-LSPlant(80@170, 90, argAngle: 60).drawSize_(4).draw(k);
-)
-
-//Dragon Curve
-(
-a = LSys("L", ["L" -&gt; "L+R+", "R" -&gt; "-L-R"]);
-k = a.applyRules(11);÷
-LSPlant(180@270, 180, argAngle: 90).drawSize_(4).draw(k);
-)
-
-//Sierpinsky triangle
-(
-a = LSys("L", ["L" -&gt; "R+L+R", "R" -&gt; "L-R-L"]);
-k = a.applyRules(6);
-LSPlant(60@400, 30, argAngle: 60).drawSize_(6).draw(k);
-)
-
-//Islands and Lakes from Algorithmic Beauty of Plants fig. 1.8.
-(
-a = LSys("F+F+F+F", ["F" -&gt; "F+f-FF+F+FF+Ff+FF-f+FF-F-FF-Ff-FFF", "f" -&gt; "ffffff"]);
-k = a.applyRules(2);
-LSPlant(360@350, 0, argAngle: 90).drawSize_(6).draw(k);
-)
-
-//Quadratic Snowflake from A.B.O.P. fig. 1.7b
-(
-a = LSys("F", ["F" -&gt; "F+F-F-F+F"]);
-k = a.applyRules(5);
-LSPlant(20@350, 90, 90, Rect(300, 300, 530, 500), { Color.rand; }).drawSize_(2).draw(k);
-)
-
-//Fig 1.9a. from A.B.O.P.
-(
-a = LSys("F-F-F-F", ["F" -&gt; "FF-F-F-F-F-F+F"]);
-k = a.applyRules(3).postln;
-LSPlant(270@120, 90, 90, argColor: { Color.rand; }).drawSize_(6).draw(k);
-)</pre>
-
-<p><strong>Context sensitive example</strong>:<pre class='code prettyprint lang-sc'>//Signal propagation throughout a string of symbols:
-
-(
-a = LSys("baaaaaaaaaaaaaaaa", ["b&lt;a" -&gt; "b", "b" -&gt; "a"]);
-16.do
-({
-    a.applyRules(1).postln;
-});
-)</pre>
-
-<p>For the syntax of the context sensitive rule definitions, refer to page 30 in the <a href="http://algorithmicbotany.org/papers/abop/abop.pdf">Algorithmic Beauty of Plants</a>.
-<p>Branching (bracketed) examples:<pre class='code prettyprint lang-sc'>//Tree b from fig 1.24 in A.B.O.P.
-(
-a = LSys("F", ["F" -&gt; "F[+F]F[-F][F]"]);
-k = a.applyRules(5).postln;
-LSPlant
-    (
-        argAngle: 20,
-        argColor:
-            {
-                [
-                    Color.green(0.6.rand + 0.4),
-                    Color.gray(0.6.rand)
-                ].choose;
-            }
-    ).drawSize_(6).draw(k);
-)
-
-//Tree c from fig 1.24 in A.B.O.P.
-(
-a = LSys("F", ["F" -&gt; "FF-[-F+F+F]+[+F-F-F]"]);
-k = a.applyRules(4).postln;
-LSPlant
-    (
-        argAngle: 22.5,
-        argColor:
-            {
-                [
-                    Color.green(0.6.rand + 0.4),
-                    Color.gray(0.6.rand)
-                ].choose;
-            }
-    ).drawSize_(6).draw(k);
-)
-
-
-//another tree
-(
-a = LSys("F", ["F" -&gt; "FF+[+F-F-F]-[-F+F+F]"]);
-k = a.applyRules(5);
-LSPlant
-    (
-        argAngle: 22.5,
-        argColor:
-            {
-                [
-                    Color.green(0.6.rand + 0.4),
-                    Color.gray(0.6.rand)
-                ].choose;
-            }
-    ).drawSize_(6).draw(k);
-)
-
-
-(
-a = LSys("F", ["F" -&gt; "F[-FF]F[+FF]F"]);
-k = a.applyRules(5);
-LSPlant
-    (
-        argAngle: 22.5,
-        argColor:
-            {
-                [
-                    Color.green(0.6.rand + 0.4),
-                    Color.gray(0.6.rand)
-                ].choose;
-            }
-    ).drawSize_(6).draw(k);
-)
-
-//Tree f from fig 1.24 in A.B.O.P.
-(
-a = LSys("X", ["X" -&gt; "F-[[X]+X]+F[+FX]-X", "F" -&gt; "FF"]);
-k = a.applyRules(5).postln;
-LSPlant
-    (
-        argAngle: 22.5,
-        argColor:
-            {
-                [
-                    Color.green(0.6.rand + 0.4),
-                    Color.gray(0.6.rand)
-                ].choose;
-            }
-    ).drawSize_(4).draw(k);
-)</pre>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computational Creativity and Music 2.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Computational Creativity and Music 2.schelp</a><br>link::Cyborg/Seminars/Computational Creativity and Music 2::<br>sc version: 3.8.0</div></div></body></html>
