--- a/Cyborg/Seminars/Human-machine Interaction.html
+++ b/Cyborg/Seminars/Human-machine Interaction.html
@@ -22,11 +22,22 @@
 <div id='related'>See also: <a href="./../../Cyborg.html">Cyborg Music</a>, <a href="./../../Cyborg/Seminars/Computation and Music.html">Computation and Music</a>, <a href="./../../Cyborg/Practicals/Interfacing.html">Interfacing</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.001.png'/><br><b>Laetitia Sonami - bbc.co.uk</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthijnfotografie.nl</b></div>
 
-<p><a href="https://youtu.be/C8GqbS2w_Lg">Laetitia Sonami</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.002.png'/><br><b>Artist Interview: Laetitia Sonami - somarts.org</b></div>
+<p><a href="https://youtu.be/pYfRORkuPX8?t=64">Michel Waisvisz - The Hands 1</a>
+<p><a href="https://youtu.be/P_9Wc457z0A">Michel Waisvisz - The Hands 2</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.001.png'/><br><b>Laetitia Sonami - bbc.co.uk</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.003.png'/></div>
+<p><a href="http://youtu.be/ngygk20M1pI">Laetitia Sonami - Lady's Gloves 1</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.002.png'/><br><b>Artist Interview: Laetitia Sonami - somarts.org</b></div>
+
+<p><a href="https://youtu.be/C8GqbS2w_Lg">Laetitia Sonami - Lady's Gloves 2</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.033.png'/><br><b>Laetitia Sonami with the "Lady's Gloves IV" (2001)</b></div>
+
+<p><a href="https://youtu.be/nEkufXDb-Ro?t=697">Laetitia Sonami - Performance at NIME2014</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.040.png'/><br><b>Imogen Heap: Musical Gloves - rachelfreire.com</b></div>
+
+<p><a href="http://youtu.be/dcLFVhRHXUM?t=4m28s">Imogen Heap - TEDx Performance</a>
+<p><a href="https://youtu.be/6btFObRRD9k?t=803">Imogen Heap - Performance with Musical Gloves</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.034.png'/><br><b>Imogen Heap using "The Musical Gloves" (2012)</b></div>
+
+<p><a href="https://youtu.be/ci-yB6EgVW4?t=18">Imogen Heap - Mimu Gloves</a>
+<p><a href="https://youtu.be/z4L1XmIxeM4">Ariana Grande with Mimu Gloves</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.003.png'/></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.004.png'/></div>
 
@@ -37,22 +48,11 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.007.png'/><br><b>Raymond Scott’s Electronium - preservationsound.com</b></div>
 
 <p><a href="https://youtu.be/1SHJ6CcML80">Cindy Electronium</a>
-<p><a href="http://youtu.be/MDIIfAMGLhM">Twilight in Turkey</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.008.png'/><br><b>Gordon Mumma at studio & schematics for MESA - brainwashed.com</b></div>
+<p><a href="http://youtu.be/MDIIfAMGLhM">Twilight in Turkey</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.010.png'/><br><b>RCA Mark II Synthesiser, Milton Babbitt, Peter Mauzey, Vladimir Ussachevsky - gearogs.com</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.009.png'/><br><b>Gordon Mumma (1972) Performing AMBIVEX.</b></div>
-
-<p><a href="https://youtu.be/4e-OzKSmZX0">Cybersonic Cantilevers (1973)</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.010.png'/><br><b>RCA Mark II Synthesiser, Milton Babbitt, Peter Mauzey, Vladimir Ussachevsky - gearogs.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.011.png '/><br><b>Max Mathews, GROOVE system (1969) - wikipedia.org</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.012.png'/><br><b>Laurie Spiegel - nytimes.com</b></div>
-
-<p><a href="http://youtu.be/OhpjHB4076g">Old Wave (1974) GROOVE system</a>
-<p><a href="http://youtu.be/AgdIRM5iMNE">Patchwork</a>
-<p><a href="http://youtu.be/5_TObcetCc0">Improvisation</a>
-<p><a href="http://youtu.be/TzOJtZYsGSA?t=2m40s">Laurie Spiegel interview</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.013.png'/><br><b>Music Mouse - youtube.com</b></div>
-
-<p><a href="http://youtu.be/D-mmEvGOopk?t=30s">Music Mouse</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.014.png'/><br><b>In Introduction to Computer Muisc - Nick Collins (2010)</b></div>
+<p><a href="https://youtu.be/RmQogNq0st4">RCA Mark II Synthesiser</a>
+<p><a href="https://youtu.be/rgN_VzEIZ1I">The Story of the RCA Synthesizer</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.011.png '/><br><b>Max Mathews, GROOVE system (1969) - wikipedia.org</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.014.png'/><br><b>In Introduction to Computer Muisc - Nick Collins (2010)</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.015.png'/><br><b>In Machine Musicianship (2001)</b></div>
 
@@ -83,29 +83,34 @@
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.032.png'/></div>
 
-<p><a href="http://youtu.be/epT16fbf4RM">Brain Interface</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.033.png'/></div>
+<p><a href="https://youtu.be/bIPU2ynqy2Y">Alvin Lucier - "Music For Solo Performer" (1965)</a>
+<p><a href="http://youtu.be/epT16fbf4RM">Brain Interface</a>
+<p><a href="https://youtu.be/lNHrZzvSf6w?t=172">Grace Leslie - Georgia Tech Brain Music Lab</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.033.png'/></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.034.png'/></div>
 
 <p><a href="https://www.mstrcyork.org/">mstrc</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.035.png'/><br><b>mstrc Audience Response System</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.008.png'/><br><b>Gordon Mumma at studio & schematics for MESA - brainwashed.com</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.036.png'/><br><b>Max Matthews with Radio Baton - computerhistory.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.009.png'/><br><b>Gordon Mumma (1972) Performing AMBIVEX.</b></div>
 
-<p><a href="http://youtu.be/3ZOzUVD4oLg?t=5m43s">Max Matthews demostrating Radio Baton</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.037.png'/><br><b>Nicolas Collins: Trombone-Propelled Electronics - artschoolshithead.files.wordpress.com</b></div>
+<p><a href="https://youtu.be/4e-OzKSmZX0">Cybersonic Cantilevers (1973)</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.037.png'/><br><b>Nicolas Collins: Trombone-Propelled Electronics - artschoolshithead.files.wordpress.com</b></div>
 
-<p><a href="http://youtu.be/89jbl0ZuaH4?t=4m55s">Nicolas Collins</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthijnfotografie.nl</b></div>
+<p><a href="http://youtu.be/89jbl0ZuaH4?t=4m55s">Nicolas Collins (1986)</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.041.png'/><br><b>Atau Tanaka - bbc.co.uk</b></div>
 
-<p><a href="http://vimeo.com/1204467">Waisvisz 1</a>
-<p><a href="http://vimeo.com/1219919">Waisvisz 2</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.039.png'/><br><b>Laetitia Sonami: Lady’s Gloves - sonami.net</b></div>
+<p><a href="http://youtu.be/o-ZcsAHVn6A?t=2m48s">Sensor Band 1 (1994)</a>
+<p><a href="http://youtu.be/XLSoPmY6jGM?t=5m20s">Sensor Band 2 (1996)</a>
+<p><a href="http://youtu.be/FB_yE_Y3_8k?t=3m50s">Tanaka with biometric sensors (2008)</a>
+<p><a href="https://youtu.be/G6H1J2k--5I">Tanaka with MYO Armband (2015)</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar5/seminar5.001.png'/><br><b>Servos connected to an Arduino</b></div>
 
-<p><a href="http://youtu.be/ngygk20M1pI">Laetitia Sonami</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.040.png'/><br><b>Imogen Heap: The Gloves - rachelfreire.com</b></div>
+<p><a href="https://youtu.be/l1ER0Wo8bwc">Hugo Morales - Torque (2011)</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar5/seminar5.002.png'/><br><b>Godfried Willem-Raess and the Logos Robot Orchestra</b></div>
 
-<p><a href="http://youtu.be/dcLFVhRHXUM?t=4m28s">Imogen Heap</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.041.png'/><br><b>Atau Tanaka - bbc.co.uk</b></div>
+<p><a href="https://youtu.be/G2lTp8Tuq6E">Demonstration of Logos Robot Orchestra</a>
+<p><a href="https://youtu.be/v85euO-0nzA?t=63">Logos Robot Orchestra plays 'Drive', by Pieter Corten</a>
+<p><a href="https://www.logosfoundation.org/instrum_gwr/snar2.html">Snar 2</a>
+<p><a href="https://www.logosfoundation.org/instrum_gwr/HAT.html">&lt;HAT&gt;</a><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar5/seminar5.003.png'/><br><b>Gil Weinberg with Shimon Robot</b></div>
 
-<p><a href="http://youtu.be/o-ZcsAHVn6A?t=2m48s">Sensor Band 1</a>
-<p><a href="http://youtu.be/XLSoPmY6jGM?t=5m20s">Sensor Band 2</a>
-<p><a href="http://youtu.be/FB_yE_Y3_8k?t=3m50s">Tanaka with biometric sensors</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.042.png'/><br><b>Tod Machover: Hyperinstruments - uvmbored.com</b></div>
-
-<p><a href="http://youtu.be/Zj2QoLhfwew?t=1m00s">Tod Machover</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.043.png'/><br><b>Reactable: Music Technology Group, Universitat Pompeu Fabra - http://youtu.be/0h-RhyopUmc</b></div>
-
-<p><a href="http://youtu.be/0h-RhyopUmc">Reactable</a><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Human-machine Interaction.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Human-machine Interaction.schelp</a><br>link::Cyborg/Seminars/Human-machine Interaction::<br>sc version: 3.8.0</div></div></body></html>
+<p><a href="https://youtu.be/iEsfmnxt5F4">Gil Weinberg - On Robotic Musicianship And Human Augmentation</a>
+<p><a href="https://youtu.be/9-bmkfpZFrc">Shimon Robot &amp; Friends</a>
+<p><a href="https://cacm.acm.org/magazines/2016/5/201594-a-survey-of-robotic-musicianship/fulltext">A Survey of Robotic Musicianship</a>
+<p><a href="https://youtu.be/v5eUo2R_Lrc">Talks at Google: Gil Weinberg - Robotic Musicianship at Georgia Tech</a><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Human-machine Interaction.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Human-machine Interaction.schelp</a><br>link::Cyborg/Seminars/Human-machine Interaction::<br>sc version: 3.8.0</div></div></body></html>
