--- a/Cyborg/Seminars/Human-machine Interaction.html
+++ b/Cyborg/Seminars/Human-machine Interaction.html
@@ -22,7 +22,7 @@
 <div id='related'>See also: <a href="./../../Cyborg.html">Cyborg Music</a>, <a href="./../../Cyborg/Seminars/Computation and Music.html">Computation and Music</a>, <a href="./../../Cyborg/Practicals/Interfacing.html">Interfacing</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthijnfotografie.nl</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthinfotografie.nl</b></div>
 
 <p><a href="https://youtu.be/pYfRORkuPX8?t=64">Michel Waisvisz - The Hands 1</a>
 <p><a href="https://youtu.be/P_9Wc457z0A">Michel Waisvisz - The Hands 2</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.001.png'/><br><b>Laetitia Sonami - bbc.co.uk</b></div>
