--- a/Cyborg/Seminars/Human-machine Interaction.html
+++ b/Cyborg/Seminars/Human-machine Interaction.html
@@ -22,7 +22,7 @@
 <div id='related'>See also: <a href="./../../Cyborg.html">Cyborg Music</a>, <a href="./../../Cyborg/Seminars/Computation and Music.html">Computation and Music</a>, <a href="./../../Cyborg/Practicals/Interfacing.html">Interfacing</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthinfotografie.nl</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthijnfotografie.nl</b></div>
 
 <p><a href="https://youtu.be/pYfRORkuPX8?t=64">Michel Waisvisz - The Hands 1</a>
 <p><a href="https://youtu.be/P_9Wc457z0A">Michel Waisvisz - The Hands 2</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.001.png'/><br><b>Laetitia Sonami - bbc.co.uk</b></div>
@@ -52,7 +52,10 @@
 
 <p><a href="https://youtu.be/RmQogNq0st4">RCA Mark II Synthesiser</a>
 <p><a href="https://youtu.be/rgN_VzEIZ1I">The Story of the RCA Synthesizer</a><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.011.png '/><br><b>Max Mathews, GROOVE system (1969) - wikipedia.org</b></div>
-<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.014.png'/><br><b>In Introduction to Computer Muisc - Nick Collins (2010)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.017.png'/><br><b>The Nervous System, including the Central Nervous System (CNS) and the Peripheral Nervous System (PNS)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.014.png'/><br><b>In Introduction to Computer Muisc - Nick Collins (2010)</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.015.png'/><br><b>In Machine Musicianship (2001)</b></div>
 
